--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
             top: 0;
             left: 0;
         }
+        @keyframes animateIn {
+            0% {
+                opacity: 0;
+            }
+            50% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
         .fallback {
+            opacity: 0;
+            animation: 5s once ease animateIn;
             width: 100%;
             height: 100%;
             overflow: hidden;
