--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             }
         }
         .fallback {
-            animation: 5s ease animateIn ease;
+            animation: 5s animateIn ease;
             width: 100%;
             height: 100%;
             overflow: hidden;
