--- a/index.html
+++ b/index.html
@@ -168,8 +168,12 @@
                 camera.updateProjectionMatrix();
             })
 
-            const ambientLight = new THREE.AmbientLight( 0xcccccc, 0.4 );
+            const ambientLight = new THREE.AmbientLight( 0x333333, 0.4 );
             scene.add( ambientLight );
+
+            const pointLight = new THREE.PointLight( 0xcccccc, 1 );
+            scene.add( pointLight );
+            pointLight.position.z = 50;
             
             const wTexture = new THREE.TextureLoader().load( 'WWW.png' );
             const materials = [
