--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         }
         .buttonClicked .button {
             opacity: 0;
+            pointer-events: none;
         }
 
 
@@ -162,6 +163,17 @@
                 mouse.x = ( event.clientX / window.innerWidth ) * 2 - 1;
                 mouse.y = - ( event.clientY / window.innerHeight ) * 2 + 1;
             })
+            
+            window.addEventListener('touchmove', function(e) {
+                mouse.x = ( e.touches[0].clientX / window.innerWidth ) * 2 - 1;
+                mouse.y = - ( e.touches[0].clientY / window.innerHeight ) * 2 + 1;
+                return false;
+            }, false);
+            window.addEventListener('touchstart', function(e) {
+                mouse.x = ( e.touches[0].clientX / window.innerWidth ) * 2 - 1;
+                mouse.y = - ( e.touches[0].clientY / window.innerHeight ) * 2 + 1;
+                return false;
+            }, false);
 
             window.addEventListener('resize', ()=>{
                 camera.aspect = window.innerWidth/window.innerHeight;
