--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         try {
 
-            var sounds = new Array(29);
+            var sounds = new Array(37 + 1);
             for (let index = 0; index < sounds.length; index++) {
                 const myIndex = index;
                 sounds[myIndex] = {
